--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 6.0.7
+          dotnet-version: 6.0.302
 
       # Publish
       - name: publish on version change
@@ -21,7 +21,7 @@ jobs:
         uses: brandedoutcast/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: Core/Core.csproj
+          PROJECT_FILE_PATH: RateLimitBlacklist/RateLimitBlacklist.csproj
           
           # Configuration to build and package
           # BUILD_CONFIGURATION: Release
