--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - main # Default release branch, may also be named 'master' or 'develop'
+      - main # Default release branch
 jobs:
   publish:
     name: build, pack & publish
@@ -18,16 +18,10 @@ jobs:
       # Publish
       - name: publish on version change
         id: publish_nuget
-        uses: brandedoutcast/publish-nuget@v2
+        uses: alirezanet/publish-nuget@v3.0.0
         with:
           # Filepath of the project to be packaged, relative to root of repository
           PROJECT_FILE_PATH: RateLimitBlacklist/RateLimitBlacklist.csproj
-          
-          # Configuration to build and package
-          # BUILD_CONFIGURATION: Release
-          
-          # Platform target to compile (default is empty/AnyCPU)
-          # BUILD_PLATFORM: x64          
           
           # NuGet package id, used for version detection & defaults to project name
           # PACKAGE_NAME: Core
@@ -55,3 +49,6 @@ jobs:
 
           # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
           # INCLUDE_SYMBOLS: false
+
+          # Flag to toggle not building the project and letting pack command handle restoring & building, disabled by default
+          # NO_BUILD: false
