--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   pack-push:
     env:
-      CAMINHO_PROJETO: ./RateLimitBlacklist/RateLimitBlacklist.csproj
+      PROJECT_PATH: ./RateLimitBlacklist/RateLimitBlacklist.csproj
+      NUGET_SOURCE: https://api.nuget.org/v3/index.json
 
     runs-on: ubuntu-latest
 
@@ -21,9 +22,9 @@ jobs:
         dotnet-version: 6.0.302
 
     - name: Geração do package
-      run: dotnet pack ${{ env.CAMINHO_PROJETO }} -c Release -o out
+      run: dotnet pack ${{ env.PROJECT_PATH }} -c Release -o out
 
     - name: Push no NuGet
       run: |
         cd out
-        dotnet nuget push *.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --skip-duplicate
+        dotnet nuget push *.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source ${{ env.PROJECT_PATH }} --skip-duplicate
