--- a/RateLimitBlacklist/RateLimitBlacklist.csproj
+++ b/RateLimitBlacklist/RateLimitBlacklist.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="docs\README.md" Pack="true" PackagePath="\"/>
+    <None Include="README.md" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
